--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="keywords,here">
     <link rel="stylesheet" href="style.css" type="text/css">  </head>
 
-    <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <body>
     <div class="grad"></div>
     <main>
