--- a/love-of-my-life/index.html
+++ b/love-of-my-life/index.html
@@ -4,7 +4,9 @@
     <!-- 
           i love it when you ()
           
-          based off of Chia Amisola's ifyouknewmewouldyoulove.me/too/    
+          based off of Chia Amisola's ifyouknewmewouldyoulove.me/too/
+
+          For the love of my life, JR. Truly the best thing to have ever happened to me.
     -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
