--- a/love-of-my-life/index.html
+++ b/love-of-my-life/index.html
@@ -6,7 +6,7 @@
           
           based off of Chia Amisola's ifyouknewmewouldyoulove.me/too/
 
-          For the love of my life, JR. Truly the best thing to have ever happened to me.
+          To the love of my life, JR. Truly the best thing to have ever happened to me.
     -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
