--- a/profjat/index.html
+++ b/profjat/index.html
@@ -4,7 +4,9 @@
     <!-- 
           i love it when you ()
           
-          based off of Chia Amisola's ifyouknewmewouldyoulove.me/too/    
+          based off of Chia Amisola's ifyouknewmewouldyoulove.me/too/
+
+          To stinky Josh, thank you for always making me laugh.
     -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
