--- a/baba/index.html
+++ b/baba/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- 
+          i love it when you ()
+          
+          based off of Chia Amisola's ifyouknewmewouldyoulove.me/too/ 
 
+          To the one and only, Baba Lai. I love you!
+    -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>i love it when you</title>
+    <meta name="author" content="Sydney">
+    <meta name="description" content="love me too">
+    <meta name="keywords" content="keywords,here">
+    <link rel="stylesheet" href="style.css" type="text/css">  </head>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <body>
+    <div class="grad"></div>
+    <main>
+      <section id="g">
+
+        <div id="i-love-it">
+          <p>I love it when you</p>
+        </div>
+  
+        <div id="when-you">
+        </div>
+      </section>
+    </main>
+    <script src="love.js" type="text/javascript"></script>
+  </body>
+</html>
